Draw manager crash opening file with curves #61035

Closed
opened 2019-01-30 20:15:24 +01:00 by Henrique Balduino Gonzaga · 10 comments

System Information
Operating system: Windows 10 64x
Graphics card: Geforce 1070

Blender Version
Broken: 957b4547ae, a1ae04d15a
Worked: Probally the build from Jan 21 since it's the last day the file was saved, and i usually update my builds on Mondays

Short description of error

My file just doesn't open anymore. It has always been working.

Manta asfaltica.blend

Is there a way to download older versions? I coudn't find

**System Information** Operating system: Windows 10 64x Graphics card: Geforce 1070 **Blender Version** Broken: 957b4547aeeb, a1ae04d15a9f Worked: Probally the build from Jan 21 since it's the last day the file was saved, and i usually update my builds on Mondays **Short description of error** My file just doesn't open anymore. It has always been working. [Manta asfaltica.blend](https://archive.blender.org/developer/F6456372/Manta_asfaltica.blend) Is there a way to download older versions? I coudn't find

Added subscriber: @HenriqueGonzaga

Added subscriber: @HenriqueGonzaga

Added subscriber: @capnm

Added subscriber: @capnm

Backtrace:

GNU gdb (Ubuntu 8.1-0ubuntu3) 8.1.0.20180409-git
...
Blender 2.80 (sub 43)
Build: 2019-01-30 21:09:59 Linux Debug
...
read file ../Manta asfaltica.blend
  Version 280 sub 41 date 2019-01-21 00:28 hash dd3f5186260e
Animato: Invalid path. ID = 'Adesivo_desenrolando ',  'modifiers["Boolean"].show_viewport[0]'
invalid driver - modifiers["Boolean"].show_viewport[0]
Animato: Invalid path. ID = 'Adesivo_desenrolando ',  'modifiers["Boolean"].show_render[0]'
invalid driver - modifiers["Boolean"].show_render[0]
eval fcurve 'location' - 0.000000 => 0/2, 1
eval fcurve 'location' - 0.000000 => 0/2, 1
eval fcurve 'location' - 0.000000 => 0/2, 1

Thread 1 "blender8debug" received signal SIGSEGV, Segmentation fault.
0x0000555558737706 in curve_render_surface_vert_len_get (lb=0x0) at source/blender/draw/intern/draw_cache_impl_displist.c:74
74		for (const DispList *dl = lb->first; dl; dl = dl->next) {
(gdb) l
69	
70	/* see: displist_get_allverts */
71	static int curve_render_surface_vert_len_get(const ListBase *lb)
72	{
73		int vert_len = 0;
=> 74		for (const DispList *dl = lb->first; dl; dl = dl->next) {
75			vert_len += dl_vert_len(dl);
76		}
77		return vert_len;
78	}
(gdb) bt
- 0  0x0000555558737706 in curve_render_surface_vert_len_get (lb=0x0) at source/blender/draw/intern/draw_cache_impl_displist.c:74
- 1  0x0000555558737d64 in DRW_displist_vertbuf_create_pos_and_nor (lb=0x0, vbo=0x7fffab73ab38) at source/blender/draw/intern/draw_cache_impl_displist.c:183
- 2  0x00005555587372c7 in DRW_curve_batch_cache_create_requested (ob=0x7fffcc973438) at source/blender/draw/intern/draw_cache_impl_curve.c:987
- 3  0x00005555587345f7 in drw_batch_cache_generate_requested (ob=0x7fffcc973438) at source/blender/draw/intern/draw_cache.c:3752
#4  0x0000555558722c94 in drw_shgroup_bone_custom_solid (bone_mat=0x7fffaf00b950, bone_color=0x55555f332070 <g_theme+80>, hint_color=0x55555ec01840 <hint_color>, outline_color=0x55555f332140 <disp_color>, custom=0x7fffcc973438)
    at source/blender/draw/intern/draw_armature.c:324
#5  0x00005555587258eb in draw_bone_custom_shape (eBone=0x0, pchan=0x7fffaf00b7b8, arm=0x7fffcc94ffb8, boneflag=8463, constflag=2, select_id=-1)
    at source/blender/draw/intern/draw_armature.c:1270
- 6  0x0000555558727387 in draw_armature_pose (ob=0x7fffcc973a38, const_color=0x55555f345e40 <G_draw>) at source/blender/draw/intern/draw_armature.c:1827
- 7  0x00005555587277b3 in DRW_shgroup_armature_object (ob=0x7fffcc973a38, view_layer=0x7fffcc951638, passes=...) at source/blender/draw/intern/draw_armature.c:1906
- 8  0x00005555586def0a in OBJECT_cache_populate (vedata=0x7fffaf293538, ob=0x7fffcc973a38) at source/blender/draw/modes/object_mode.c:3099
- 9  0x00005555586b42bd in drw_engines_cache_populate (ob=0x7fffcc973a38) at source/blender/draw/intern/draw_manager.c:1031
#10 0x00005555586b5511 in DRW_draw_render_loop_ex (depsgraph=0x7fffcc9422f8, engine_type=0x55555ea3dc80 <DRW_engine_viewport_eevee_type>, ar=0x7fffaf806a38, v3d=0x7fffaf622438, viewport=0x7fffad03dff8, evil_C=0x7fffcf0963f8)
    at source/blender/draw/intern/draw_manager.c:1495
- 11 0x00005555586b511d in DRW_draw_view (C=0x7fffcf0963f8) at source/blender/draw/intern/draw_manager.c:1421
- 12 0x0000555557b2923f in view3d_draw_view (C=0x7fffcf0963f8, ar=0x7fffaf806a38) at source/blender/editors/space_view3d/view3d_draw.c:1340
- 13 0x0000555557b292ef in view3d_main_region_draw (C=0x7fffcf0963f8, ar=0x7fffaf806a38) at source/blender/editors/space_view3d/view3d_draw.c:1361
- 14 0x0000555557feaff8 in ED_region_do_draw (C=0x7fffcf0963f8, ar=0x7fffaf806a38) at source/blender/editors/screen/area.c:514
- 15 0x00005555579df4d9 in wm_draw_window_offscreen (C=0x7fffcf0963f8, win=0x7fffaf236478, stereo=false) at source/blender/windowmanager/intern/wm_draw.c:580
- 16 0x00005555579dfa57 in wm_draw_window (C=0x7fffcf0963f8, win=0x7fffaf236478) at source/blender/windowmanager/intern/wm_draw.c:712
- 17 0x00005555579dff63 in wm_draw_update (C=0x7fffcf0963f8) at source/blender/windowmanager/intern/wm_draw.c:866
- 18 0x00005555579dcbed in WM_main (C=0x7fffcf0963f8) at source/blender/windowmanager/intern/wm.c:431
#19 0x00005555579d7468 in main (argc=3, argv=0x7fffffffdc78) at source/creator/creator.c:520
Backtrace: ``` GNU gdb (Ubuntu 8.1-0ubuntu3) 8.1.0.20180409-git ... Blender 2.80 (sub 43) Build: 2019-01-30 21:09:59 Linux Debug ... read file ../Manta asfaltica.blend Version 280 sub 41 date 2019-01-21 00:28 hash dd3f5186260e Animato: Invalid path. ID = 'Adesivo_desenrolando ', 'modifiers["Boolean"].show_viewport[0]' invalid driver - modifiers["Boolean"].show_viewport[0] Animato: Invalid path. ID = 'Adesivo_desenrolando ', 'modifiers["Boolean"].show_render[0]' invalid driver - modifiers["Boolean"].show_render[0] eval fcurve 'location' - 0.000000 => 0/2, 1 eval fcurve 'location' - 0.000000 => 0/2, 1 eval fcurve 'location' - 0.000000 => 0/2, 1 Thread 1 "blender8debug" received signal SIGSEGV, Segmentation fault. 0x0000555558737706 in curve_render_surface_vert_len_get (lb=0x0) at source/blender/draw/intern/draw_cache_impl_displist.c:74 74 for (const DispList *dl = lb->first; dl; dl = dl->next) { (gdb) l 69 70 /* see: displist_get_allverts */ 71 static int curve_render_surface_vert_len_get(const ListBase *lb) 72 { 73 int vert_len = 0; => 74 for (const DispList *dl = lb->first; dl; dl = dl->next) { 75 vert_len += dl_vert_len(dl); 76 } 77 return vert_len; 78 } (gdb) bt - 0 0x0000555558737706 in curve_render_surface_vert_len_get (lb=0x0) at source/blender/draw/intern/draw_cache_impl_displist.c:74 - 1 0x0000555558737d64 in DRW_displist_vertbuf_create_pos_and_nor (lb=0x0, vbo=0x7fffab73ab38) at source/blender/draw/intern/draw_cache_impl_displist.c:183 - 2 0x00005555587372c7 in DRW_curve_batch_cache_create_requested (ob=0x7fffcc973438) at source/blender/draw/intern/draw_cache_impl_curve.c:987 - 3 0x00005555587345f7 in drw_batch_cache_generate_requested (ob=0x7fffcc973438) at source/blender/draw/intern/draw_cache.c:3752 #4 0x0000555558722c94 in drw_shgroup_bone_custom_solid (bone_mat=0x7fffaf00b950, bone_color=0x55555f332070 <g_theme+80>, hint_color=0x55555ec01840 <hint_color>, outline_color=0x55555f332140 <disp_color>, custom=0x7fffcc973438) at source/blender/draw/intern/draw_armature.c:324 #5 0x00005555587258eb in draw_bone_custom_shape (eBone=0x0, pchan=0x7fffaf00b7b8, arm=0x7fffcc94ffb8, boneflag=8463, constflag=2, select_id=-1) at source/blender/draw/intern/draw_armature.c:1270 - 6 0x0000555558727387 in draw_armature_pose (ob=0x7fffcc973a38, const_color=0x55555f345e40 <G_draw>) at source/blender/draw/intern/draw_armature.c:1827 - 7 0x00005555587277b3 in DRW_shgroup_armature_object (ob=0x7fffcc973a38, view_layer=0x7fffcc951638, passes=...) at source/blender/draw/intern/draw_armature.c:1906 - 8 0x00005555586def0a in OBJECT_cache_populate (vedata=0x7fffaf293538, ob=0x7fffcc973a38) at source/blender/draw/modes/object_mode.c:3099 - 9 0x00005555586b42bd in drw_engines_cache_populate (ob=0x7fffcc973a38) at source/blender/draw/intern/draw_manager.c:1031 #10 0x00005555586b5511 in DRW_draw_render_loop_ex (depsgraph=0x7fffcc9422f8, engine_type=0x55555ea3dc80 <DRW_engine_viewport_eevee_type>, ar=0x7fffaf806a38, v3d=0x7fffaf622438, viewport=0x7fffad03dff8, evil_C=0x7fffcf0963f8) at source/blender/draw/intern/draw_manager.c:1495 - 11 0x00005555586b511d in DRW_draw_view (C=0x7fffcf0963f8) at source/blender/draw/intern/draw_manager.c:1421 - 12 0x0000555557b2923f in view3d_draw_view (C=0x7fffcf0963f8, ar=0x7fffaf806a38) at source/blender/editors/space_view3d/view3d_draw.c:1340 - 13 0x0000555557b292ef in view3d_main_region_draw (C=0x7fffcf0963f8, ar=0x7fffaf806a38) at source/blender/editors/space_view3d/view3d_draw.c:1361 - 14 0x0000555557feaff8 in ED_region_do_draw (C=0x7fffcf0963f8, ar=0x7fffaf806a38) at source/blender/editors/screen/area.c:514 - 15 0x00005555579df4d9 in wm_draw_window_offscreen (C=0x7fffcf0963f8, win=0x7fffaf236478, stereo=false) at source/blender/windowmanager/intern/wm_draw.c:580 - 16 0x00005555579dfa57 in wm_draw_window (C=0x7fffcf0963f8, win=0x7fffaf236478) at source/blender/windowmanager/intern/wm_draw.c:712 - 17 0x00005555579dff63 in wm_draw_update (C=0x7fffcf0963f8) at source/blender/windowmanager/intern/wm_draw.c:866 - 18 0x00005555579dcbed in WM_main (C=0x7fffcf0963f8) at source/blender/windowmanager/intern/wm.c:431 #19 0x00005555579d7468 in main (argc=3, argv=0x7fffffffdc78) at source/creator/creator.c:520 ```
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm rdata->ob_curve_cache->disp is NULL.

Tried opening that file in older builds [I have a couple of builds going back to Nov1st2018] but file is crashing those builds as well...

Tried recovering (by appending all collections into a new file), that seems to go fine [not sure everything is working correctly though...], see:
Manta asfaltica recovered.blend

Can confirm `rdata->ob_curve_cache->disp` is NULL. Tried opening that file in older builds [I have a couple of builds going back to Nov1st2018] but file is crashing those builds as well... Tried recovering (by appending all collections into a new file), that seems to go fine [not sure everything is working correctly though...], see: [Manta asfaltica recovered.blend](https://archive.blender.org/developer/F6462794/Manta_asfaltica_recovered.blend)

I dug around a bit. There are apparently issues when using a text object as a bone shape.
Here is the same file where I converted the text object causing the crash into a mesh:
Manta asfaltica2.blend
image.png

For example, this test-file crashes Blender, when you add a modifier to the text object:
custom-shape-crash2.blend

image.png

Switching to fully guarded memory allocator.
Blender 2.80 (sub 43)
Build: 2019-01-31 13:06:06 Linux Debug
...
read file custom-shape-crash2.blend
  Version 280 sub 43 date 2019-01-31 07:51 hash 8f4b7d706b0e
blender8debug(BLI_system_backtrace+0x35) [0x559f0cce117f]
blender8debug(+0x315b976) [0x559f0c54b976]
blender8debug(GPU_batch_clear+0x3e) [0x559f0c4ecc68]
blender8debug(DRW_mesh_batch_cache_create_requested+0x384) [0x559f0c5495a3]
blender8debug(drw_batch_cache_generate_requested+0x15a) [0x559f0c5cf4ef]
blender8debug(+0x315f229) [0x559f0c54f229]
blender8debug(DRW_draw_render_loop_ex+0x3f1) [0x559f0c55045f]
blender8debug(DRW_draw_view+0x103) [0x559f0c55006b]
blender8debug(+0x25d4371) [0x559f0b9c4371]
blender8debug(view3d_main_region_draw+0x43) [0x559f0b9c4421]
blender8debug(ED_region_do_draw+0x1ab) [0x559f0be85e87]
blender8debug(+0x248a639) [0x559f0b87a639]
blender8debug(+0x248abb7) [0x559f0b87abb7]
blender8debug(wm_draw_update+0xc5) [0x559f0b87b0c3]
blender8debug(WM_main+0x48) [0x559f0b877d4d]
blender8debug(+0x24825c8) [0x559f0b8725c8]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f359a527b97]
blender8debug(_start+0x2a) [0x559f0b871f4a]
BLI_assert failed: source/blender/draw/intern/draw_instance_data.c:122, instance_batch_free(), at 'ibuf->shgroup == ((void *)0)'
Aborted

I dug around a bit. There are apparently issues when using a text object as a bone shape. Here is the same file where I converted the text object causing the crash into a mesh: [Manta asfaltica2.blend](https://archive.blender.org/developer/F6463712/Manta_asfaltica2.blend) ![image.png](https://archive.blender.org/developer/F6463736/image.png) For example, this test-file crashes Blender, when you add a modifier to the text object: [custom-shape-crash2.blend](https://archive.blender.org/developer/F6463730/custom-shape-crash2.blend) ![image.png](https://archive.blender.org/developer/F6463861/image.png) ``` Switching to fully guarded memory allocator. Blender 2.80 (sub 43) Build: 2019-01-31 13:06:06 Linux Debug ... read file custom-shape-crash2.blend Version 280 sub 43 date 2019-01-31 07:51 hash 8f4b7d706b0e blender8debug(BLI_system_backtrace+0x35) [0x559f0cce117f] blender8debug(+0x315b976) [0x559f0c54b976] blender8debug(GPU_batch_clear+0x3e) [0x559f0c4ecc68] blender8debug(DRW_mesh_batch_cache_create_requested+0x384) [0x559f0c5495a3] blender8debug(drw_batch_cache_generate_requested+0x15a) [0x559f0c5cf4ef] blender8debug(+0x315f229) [0x559f0c54f229] blender8debug(DRW_draw_render_loop_ex+0x3f1) [0x559f0c55045f] blender8debug(DRW_draw_view+0x103) [0x559f0c55006b] blender8debug(+0x25d4371) [0x559f0b9c4371] blender8debug(view3d_main_region_draw+0x43) [0x559f0b9c4421] blender8debug(ED_region_do_draw+0x1ab) [0x559f0be85e87] blender8debug(+0x248a639) [0x559f0b87a639] blender8debug(+0x248abb7) [0x559f0b87abb7] blender8debug(wm_draw_update+0xc5) [0x559f0b87b0c3] blender8debug(WM_main+0x48) [0x559f0b877d4d] blender8debug(+0x24825c8) [0x559f0b8725c8] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f359a527b97] blender8debug(_start+0x2a) [0x559f0b871f4a] BLI_assert failed: source/blender/draw/intern/draw_instance_data.c:122, instance_batch_free(), at 'ibuf->shgroup == ((void *)0)' Aborted ```

Thanks for recovering my file.

It's weird that it was not opening on older versions.
I have been working with it and using texts as shapes for a long time and i never had this problem..

Thanks for recovering my file. It's weird that it was not opening on older versions. I have been working with it and using texts as shapes for a long time and i never had this problem..
Clément Foucault was assigned by Brecht Van Lommel 2019-04-04 23:57:05 +02:00
Brecht Van Lommel changed title from My 2.8 file stopped oppening on newest builds to Draw manager crash opening file with curves 2019-04-04 23:57:35 +02:00

This issue was referenced by e559074c4e

This issue was referenced by e559074c4e5d5c17b00f6b7e2466c179f05034d8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

f12040e088

The OP file still crashes Blender (an another bug):

Read blend: /tmp/Manta-asfaltica.blend
ERROR (bke.anim_sys): source/blender/blenkernel/intern/anim_sys.c:3795 BKE_animsys_eval_driver: invalid driver - modifiers["Boolean"].show_viewport[0]
ERROR (bke.anim_sys): source/blender/blenkernel/intern/anim_sys.c:3795 BKE_animsys_eval_driver: invalid driver - modifiers["Boolean"].show_render[0]

Thread 1 "blender8tip" received signal SIGSEGV, Segmentation fault.
0x00005555583eaff4 in curve_render_surface_vert_len_get ()
(gdb) bt
- 0  0x00005555583eaff4 in curve_render_surface_vert_len_get ()
- 1  0x00005555583eb5a7 in DRW_displist_vertbuf_create_pos_and_nor ()
- 2  0x00005555583eac62 in DRW_curve_batch_cache_create_requested ()
- 3  0x00005555583e84e9 in drw_batch_cache_generate_requested ()
- 4  0x00005555583d7bec in drw_shgroup_bone_custom_solid ()
- 5  0x00005555583da87a in draw_bone_custom_shape ()
- 6  0x00005555583dc2dd in draw_armature_pose ()
- 7  0x00005555583dc772 in DRW_shgroup_armature_object ()
- 8  0x0000555558397d7e in OBJECT_cache_populate ()
- 9  0x0000555558373403 in drw_engines_cache_populate ()
- 10 0x00005555583745a4 in DRW_draw_render_loop_ex ()
- 11 0x00005555583741ed in DRW_draw_view ()
- 12 0x0000555557aa3b0c in view3d_draw_view ()
- 13 0x0000555557aa3bbc in view3d_main_region_draw ()
- 14 0x0000555557e39771 in ED_region_do_draw ()
- 15 0x000055555795e19b in wm_draw_window_offscreen ()
- 16 0x000055555795e719 in wm_draw_window ()
- 17 0x000055555795ec25 in wm_draw_update ()
- 18 0x000055555795b996 in WM_main ()
- 19 0x0000555557956159 in parse_int_relative ()
(gdb) 
f12040e088 The OP file still crashes Blender (an another bug): ``` Read blend: /tmp/Manta-asfaltica.blend ERROR (bke.anim_sys): source/blender/blenkernel/intern/anim_sys.c:3795 BKE_animsys_eval_driver: invalid driver - modifiers["Boolean"].show_viewport[0] ERROR (bke.anim_sys): source/blender/blenkernel/intern/anim_sys.c:3795 BKE_animsys_eval_driver: invalid driver - modifiers["Boolean"].show_render[0] Thread 1 "blender8tip" received signal SIGSEGV, Segmentation fault. 0x00005555583eaff4 in curve_render_surface_vert_len_get () (gdb) bt - 0 0x00005555583eaff4 in curve_render_surface_vert_len_get () - 1 0x00005555583eb5a7 in DRW_displist_vertbuf_create_pos_and_nor () - 2 0x00005555583eac62 in DRW_curve_batch_cache_create_requested () - 3 0x00005555583e84e9 in drw_batch_cache_generate_requested () - 4 0x00005555583d7bec in drw_shgroup_bone_custom_solid () - 5 0x00005555583da87a in draw_bone_custom_shape () - 6 0x00005555583dc2dd in draw_armature_pose () - 7 0x00005555583dc772 in DRW_shgroup_armature_object () - 8 0x0000555558397d7e in OBJECT_cache_populate () - 9 0x0000555558373403 in drw_engines_cache_populate () - 10 0x00005555583745a4 in DRW_draw_render_loop_ex () - 11 0x00005555583741ed in DRW_draw_view () - 12 0x0000555557aa3b0c in view3d_draw_view () - 13 0x0000555557aa3bbc in view3d_main_region_draw () - 14 0x0000555557e39771 in ED_region_do_draw () - 15 0x000055555795e19b in wm_draw_window_offscreen () - 16 0x000055555795e719 in wm_draw_window () - 17 0x000055555795ec25 in wm_draw_update () - 18 0x000055555795b996 in WM_main () - 19 0x0000555557956159 in parse_int_relative () (gdb) ```
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61035
No description provided.